--- a/winnerPage.html
+++ b/winnerPage.html
@@ -19,8 +19,23 @@
             <p class="winner-page-para">YOU WON THE GAME</p>
         </div>
         <button class="play-again-btn" id="playAgainBtnWinnerPage">PLAY AGAIN</button>
+        <div class="toggle-none" id="modalContainerWinnerPage">
+            <div class="modal">
+                <div class="modal-content">
+                    <h4 class="modal-heading">GAME RULES</h4>
+                    <ul class="game-rules-list">
+                        <li>Rock beats scissors, scissors beat paper and paper beat rock.</li>
+                        <li>Agree ahead of time whether you'll countoff "rock,paper,scissors,shoot" or just
+                            "rock,paper,scissors".</li>
+                        <li>Use rock,paper,scissors to take minor decisions or play just time pass.</li>
+                        <li>If both players lay down the same hand, each player lays down another hand.</li>
+                    </ul>
+                </div>
+                <button class="cross-btn" id="crossBtnWinnerPage">X</button>
+            </div>
+        </div>
         <div class="button-container">
-            <button class="rules-button">RULES</button>
+            <button class="rules-button" id="rulesBtnWinnerPage">RULES</button>
         </div>
     </div>
     <script src="./script.js"></script>
